<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Trip Reminder</string>
    <string name="trips">Trips</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sync">Sync</string>
    <string name="logout">Logout</string>
    <string name="email">test@gmail.com</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="todo">ToDo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_Registred">AlreadyRegistred ?<u> Login</u></string>
    <string name="donot_hava_account">Do not have Account ?<u> Register</u></string>
    <string name="start">start</string>
    <string name="login">Login</string>
    <string name="note">Note</string>
    <string name="menu">menu</string>
    <string name="enter_text">Enter text</string>
    <string name="reset">reset</string>
    <string name="add">add</string>
    <string name="viewNotes">View Notes</string>
    <string name="trip_name">Trip Name</string>
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point</string>
    <string name="date">Date</string>
    <string name="trip_add">Add Trip</string>
    <string name="tripDate">Date</string>
    <string name="tripTime">Time</string>
    <string name="rounded_direction">Round Trip</string>
    <string name="create_now">Create</string>
    <string name="cancel">cancel</string>
    <string name="text_empty">Text is empty</string>
    <string name="name_required">name is required</string>
    <string name="date_expired">Date is expired</string>
    <string name="time_expired">Time is expired</string>
    <string name="time_required">Time is required</string>
    <string name="date_required">Date is required</string>
    <string name="endPoint_required">EndPoint is required</string>
    <string name="startPoint_required">StartPoint is required</string>
    <!--<string name="api_key">AIzaSyAmAyBdhJjtIw2q_7F6hpWBXEOllPrzl68</string>-->
    <string name="api_key">AIzaSyBSJ5zNdVPG9kfSSZd4PECU91GgRedF6Vc</string>

    <string name="edit">Edit</string>
    <string name="trip_edit">Edit Trip</string>

    <string name="close">close</string>
    <string name="notes">Notes</string>
    <string name="empty_list">There is no trips yet</string>



</resources>
