<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
     android:layout_width="match_parent"
    tools:context=".ui.fragment.AddNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/note_img_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_close" />

        <EditText
            android:id="@+id/note_body"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/enter_text" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/note_btn_add"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn_create"
                android:text="@string/add"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/blue"
                app:iconTint="@color/blue" />

            <Button
                android:id="@+id/note_btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn_cancel"
                android:text="@string/reset"
                app:backgroundTint="" />


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/addNote_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/item_note" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>