<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.addNote.AddNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/note_img_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginBottom="8dp"
            app:srcCompat="@drawable/ic_closeing" />

        <EditText
            android:id="@+id/note_body"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/enter_text" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/note_btn_add"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn_login"
                android:text="@string/add"
                android:textColor="#F16950"
                app:backgroundTint="#F16950"
                app:iconTint="@color/blue" />

            <Button
                android:id="@+id/note_btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn_login"
                android:text="@string/reset"
                app:backgroundTint="#C8C6C6"
                android:textColor="#C8C6C6"/>


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/addNote_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/item_note" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>