<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.profile.ProfileFragment">

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="150dp"-->
<!--        app:contentInsetEnd="0dp"-->
<!--        app:contentInsetEndWithActions="0dp"-->
<!--        app:contentInsetStart="0dp"-->
<!--        app:contentInsetStartWithNavigation="0dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="@drawable/toolbar_background">-->
<!--            <TextView-->
<!--                android:id="@+id/txt_profile"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                android:layout_marginStart="16dp"-->
<!--                android:layout_marginLeft="16dp"-->
<!--                android:layout_marginTop="22dp"-->
<!--                android:text="@string/profile"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="22sp"/>-->


<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--    </androidx.appcompat.widget.Toolbar>-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.3"
        android:src="@drawable/toolbar_background"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/txt_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/user_profile"
        app:layout_constraintBottom_toBottomOf="@+id/img_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="fitXY"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/imgUser"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="8dp"
        android:layout_marginTop="32dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_shape"
                android:gravity="start"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/email"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                app:backgroundTint="@color/white"
                app:icon="@drawable/ic_baseline_email_24"
                app:iconGravity="start"
                app:iconPadding="4dp"
                app:iconTint="@color/gray"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_shape"
                android:gravity="start"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/sync"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                app:backgroundTint="@color/white"
                app:icon="@drawable/ic_baseline_send_24"
                app:iconGravity="start"
                app:iconPadding="4dp"
                app:iconTint="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/btn_email" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_shape"
                android:gravity="start"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                app:backgroundTint="@color/white"
                app:icon="@drawable/ic_baseline_login_24"
                app:iconGravity="start"
                app:iconPadding="4dp"
                app:iconTint="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/btn_sync" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>