<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_marginTop="60dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/street"
                app:civ_border_color="@color/blue"
                app:civ_border_width="1dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/blue"
                android:textSize="50sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_account" />


                <EditText
                    android:id="@+id/edit_email_signup"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:background="@drawable/background_txt"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="12dp"
                    android:textColorHint="@color/gray"
                    android:paddingLeft="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:weightSum="5">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_lock" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray"
                    app:hintTextColor="@color/gray"
                    tools:ignore="MissingConstraints"
                    app:passwordToggleTint="@color/gray"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edit_password_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_txt"
                        android:fontFamily="sans-serif-condensed-medium"

                        android:ems="5"
                        android:inputType="textPassword"
                        android:hint="Password"
                        android:textColor="@color/black"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:weightSum="5">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_lock" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray"
                    app:hintTextColor="@color/gray"
                    tools:ignore="MissingConstraints"
                    app:passwordToggleTint="@color/gray"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edit_confirm_password_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_txt"
                        android:fontFamily="sans-serif-condensed-medium"

                        android:ems="2"
                        android:hint="Confirm Password"
                        android:textColor="@color/black"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/background_btn_login"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="22sp"
                app:backgroundTint="@color/blue" />

            <TextView
                android:id="@+id/text_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/already_Registred"
                android:textColor="#60778B"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>